Fixed hand not showing

--- a/src/main/resources/sep/wrapper/globals.css
+++ b/src/main/resources/sep/wrapper/globals.css
@@ -97,6 +97,8 @@
 .danger-btn-mini:hover,
 .danger-btn:hover {
     -fx-background-color: -danger-btn-color-hover;
+
+    -fx-cursor: hand;
 }
 
 .danger-btn-mini {
